Add a mechanism that allows to register the status changes